# RelayServer

./: CMakeLists.txt  README.md
asset/: structure.drawio
include/: Buffer.h  Common.h  Connection.h  Logger.h  Memory.h  NetAddress.h  RelayServer.h  Server.h  Socket.h  StressGenerator.h  Utils.h
src/: Buffer.cpp  CMakeLists.txt  Epoll.cpp  Logger.cpp  NetAddress.cpp  RelayServer.cpp  Server.cpp  ServerMain.cpp  Socket.cpp  Utils.cpp
src/Generator/: StressGenerator.cpp  main.cpp
src/Server/: Server.cpp
test/: BufferTest.cpp  CMakeLists.txt  EpollTest.cpp  LogTest.cpp  StressGeneratorTest.cpp
test/client/: CMakeLists.txt  recv_cli.cpp  send_cli.cpp  send_recv_cli.cpp  test_server.cpp
test/server/: CMakeLists.txt  server.cpp
