add_library(RelayLib STATIC   NetAddress.cpp Socket.cpp Utils.cpp RelayServer.cpp Logger.cpp)
add_executable(SERVER ServerMain.cpp)
target_link_libraries(SERVER PRIVATE RelayLib)
list(APPEND ELF_DIR  Generator)
set(MAIN_SRC Utils.cpp Logger.cpp)
foreach(ELF ${ELF_DIR})
    aux_source_directory(${ELF} ${ELF})
    add_executable(${ELF} ${MAIN_SRC} ${${ELF}})
    # target_link_libraries(${ELF} ${CMAKE_THREAD_LIBS_INIT})
endforeach(ELF ${ELF_DIR})
# add_executable(LOGTEST LogTest.cpp Logger.cpp)